src/main/java/com/example/shop/web/error/NotFoundException.java

package com.example.shop.web.error;

public class NotFoundException extends RuntimeException {
  public NotFoundException(String msg) { super(msg); }
}
